--- a/base/en-US/about.html
+++ b/base/en-US/about.html
@@ -7,7 +7,7 @@
         <title>
             About
         </title>
-        <!-- version "0.9.0.17 build 20180227.023925" -->
+        <!-- version "0.9.1.12 build 20180228.004156" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -86,19 +86,19 @@
                                                         ├ App
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/browser/index.html" style="text-indent:1em;">
                                                     ├ Digital Browser
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/browserpro/index.html" style="text-indent:1em;">
                                                     ├ Digital Browser Pro
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate/index.html" style="text-indent:1em;">
                                                     └ Digital Translate
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/compare.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/compare/index.html" style="text-indent:1em;">
                                                     └ Data Compare
                                                 </a>
                                             </li>
@@ -109,13 +109,13 @@
                                                         ├ Integrated Development Environment (IDE)
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb/index.html" style="text-indent:1em;">
                                                     ├ Digital IDE for Web
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepro/index.html" style="text-indent:1em;">
                                                     ├ Digital IDE Pro
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepy/index.html" style="text-indent:1em;">
                                                     └ Digital IDE for Python
                                                 </a>
                                             </li>
@@ -136,13 +136,13 @@
                                                         └ Applet
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ftsearch/index.html" style="text-indent:1em;">
                                                     ├ Full Text Search
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ft_repl/index.html" style="text-indent:1em;">
                                                     ├ Full Text Replace
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ws_dlinkg/index.html" style="text-indent:1em;">
                                                     └ Dead Link Detect
                                                 </a>
                                             </li>
@@ -231,7 +231,7 @@
                         </p>
                         <p style="text-indent:2em;">
                             Meet
-                            <a target="_blank" href="http://www.digitser.cn/en-US.html">
+                            <a target="_blank" href="http://dts.digitser.cn/en-US.html">
                                 <b>
                                     "Digits Cloud Community"
                                 </b>
@@ -490,7 +490,7 @@
                             </a>
                         </p>
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            <a target="_blank" href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action" style="color:#7d7d7d;">
+                            <a target="_blank" href="http://www.miitbeian.gov.cn/" style="color:#7d7d7d;">
                                 Ministry of Industry and Information Technology
                             </a>
                             : GuangDong ICP No. 14079481-2
