--- a/base/zh-TW.html
+++ b/base/zh-TW.html
@@ -9,7 +9,7 @@
             自適應手機-平闆-PC
             基本靜態網站模闆
         </title>
-        <!-- version "1.5.0.20 build 20180227.023837" -->
+        <!-- version "1.5.1.11 build 20180228.004156" -->
         <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
         <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -88,19 +88,19 @@
                                                         ├ 應用
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/browser/index.html" style="text-indent:1em;">
                                                     ├ 數字瀏覽器
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/browserpro/index.html" style="text-indent:1em;">
                                                     ├ 數字瀏覽器專業版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate/index.html" style="text-indent:1em;">
                                                     └ 數字翻譯
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/compare.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/compare/index.html" style="text-indent:1em;">
                                                     └ 數據比較
                                                 </a>
                                             </li>
@@ -111,13 +111,13 @@
                                                         ├ IDE 集成開發環境
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb/index.html" style="text-indent:1em;">
                                                     ├ 數字 IDE 網頁
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/idepro/index.html" style="text-indent:1em;">
                                                     ├ 數字 IDE 專業版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/idepy/index.html" style="text-indent:1em;">
                                                     └ 數字 IDE Python
                                                 </a>
                                             </li>
@@ -138,13 +138,13 @@
                                                         └ 小程序
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ftsearch/index.html" style="text-indent:1em;">
                                                     ├ 全文搜索
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ft_repl/index.html" style="text-indent:1em;">
                                                     ├ 全文替換
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/applet/ws_dlinkg/index.html" style="text-indent:1em;">
                                                     └ 死鏈檢測
                                                 </a>
                                             </li>
@@ -215,12 +215,12 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="item active">
-                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb.html">
+                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb/index.html">
                                     <img src="images/ideweb/4.4.8.72_build_20170929.230121.jpg"
                                     alt="數字 IDE 網頁" title="數字 IDE 網頁">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb.html">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/ide/ideweb/index.html">
                                         <b>
                                             5.6.5.3 build 20180218.113907
                                         </b>
@@ -232,12 +232,12 @@
                                 </p>
                             </div>
                             <div class="item">
-                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate.html">
+                                <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate/index.html">
                                     <img src="images/translate/5.2.4.18_build_20171001.160156.jpg"
                                     alt="數字翻譯" title="數字翻譯">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate.html">
+                                    <a target="_blank" href="http://dts.digitser.cn/zh-TW/app/translate/index.html">
                                         <b>
                                             6.4.1.7 build 20180219.133658
                                         </b>
@@ -290,7 +290,7 @@
                         </p>
                         <p style="text-indent:2em;">
                             在滿足
-                            <a target="_blank" href="http://www.digitser.cn/zh-TW.html">
+                            <a target="_blank" href="http://dts.digitser.cn/zh-TW.html">
                                 <b>
                                     "德雲社區"
                                 </b>
@@ -540,7 +540,7 @@
                             </a>
                         </p>
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            <a target="_blank" href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action" style="color:#7d7d7d;">
+                            <a target="_blank" href="http://www.miitbeian.gov.cn/" style="color:#7d7d7d;">
                                 工業和信息化部
                             </a>
                             ：粵ICP備14079481號-2
