--- a/orange-red/en-US.html
+++ b/orange-red/en-US.html
@@ -9,7 +9,7 @@
             Adaptive Mobile-Tablet-PC
             Orange-red Static Website Template
         </title>
-        <!-- version "1.5.0.22 build 20180227.023924" -->
+        <!-- version "1.5.1.12 build 20180228.004156" -->
         <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
         <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
         <link rel="icon" href="images/favicon.png" type="image/png" />
@@ -88,19 +88,19 @@
                                                         ├ App
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/browser/index.html" style="text-indent:1em;">
                                                     ├ Digital Browser
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/browserpro/index.html" style="text-indent:1em;">
                                                     ├ Digital Browser Pro
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate/index.html" style="text-indent:1em;">
                                                     └ Digital Translate
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/compare.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/compare/index.html" style="text-indent:1em;">
                                                     └ Data Compare
                                                 </a>
                                             </li>
@@ -111,13 +111,13 @@
                                                         ├ Integrated Development Environment (IDE)
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb/index.html" style="text-indent:1em;">
                                                     ├ Digital IDE for Web
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepro/index.html" style="text-indent:1em;">
                                                     ├ Digital IDE Pro
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/idepy/index.html" style="text-indent:1em;">
                                                     └ Digital IDE for Python
                                                 </a>
                                             </li>
@@ -138,13 +138,13 @@
                                                         └ Applet
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ftsearch/index.html" style="text-indent:1em;">
                                                     ├ Full Text Search
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ft_repl/index.html" style="text-indent:1em;">
                                                     ├ Full Text Replace
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/en-US/applet/ws_dlinkg/index.html" style="text-indent:1em;">
                                                     └ Dead Link Detect
                                                 </a>
                                             </li>
@@ -215,12 +215,12 @@
                         </ol>
                         <div class="carousel-inner">
                             <div class="item active">
-                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb.html">
+                                <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb/index.html">
                                     <img src="images/ideweb/4.4.8.72_build_20170929.230121.jpg"
                                     alt="Digital IDE for Web" title="Digital IDE for Web">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb.html">
+                                    <a target="_blank" href="http://dts.digitser.cn/en-US/ide/ideweb/index.html">
                                         <b>
                                             5.6.5.3 build 20180218.113907
                                         </b>
@@ -232,12 +232,12 @@
                                 </p>
                             </div>
                             <div class="item">
-                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate.html">
+                                <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate/index.html">
                                     <img src="images/translate/5.2.4.18_build_20171001.160156.jpg"
                                     alt="Digital Translate" title="Digital Translate">
                                 </a>
                                 <p style="text-align:center;font-size:18px;">
-                                    <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate.html">
+                                    <a target="_blank" href="http://dts.digitser.cn/en-US/app/translate/index.html">
                                         <b>
                                             6.4.1.7 build 20180219.133658
                                         </b>
@@ -290,7 +290,7 @@
                         </p>
                         <p style="text-indent:2em;">
                             Meet
-                            <a target="_blank" href="http://www.digitser.cn/en-US.html">
+                            <a target="_blank" href="http://dts.digitser.cn/en-US.html">
                                 <b>
                                     "Digits Cloud Community"
                                 </b>
@@ -540,7 +540,7 @@
                             </a>
                         </p>
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            <a target="_blank" href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action" style="color:#7d7d7d;">
+                            <a target="_blank" href="http://www.miitbeian.gov.cn/" style="color:#7d7d7d;">
                                 Ministry of Industry and Information Technology
                             </a>
                             : GuangDong ICP No. 14079481-2
