--- a/orange-red/zh-CN/about.html
+++ b/orange-red/zh-CN/about.html
@@ -7,7 +7,7 @@
         <title>
             关于
         </title>
-        <!-- version "0.9.0.16 build 20180227.023811" -->
+        <!-- version "0.9.1.11 build 20180228.004157" -->
         <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
         <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
@@ -86,19 +86,19 @@
                                                         ├ 应用
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/browser.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/browser/index.html" style="text-indent:1em;">
                                                     ├ 数字浏览器
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/brwspro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/browserpro/index.html" style="text-indent:1em;">
                                                     ├ 数字浏览器专业版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/translate.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/translate/index.html" style="text-indent:1em;">
                                                     └ 数字翻译
                                                 </a>
                                             </li>
                                             <li class="divider"></li>
                                             <li>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/compare.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/app/compare/index.html" style="text-indent:1em;">
                                                     └ 数据比较
                                                 </a>
                                             </li>
@@ -109,13 +109,13 @@
                                                         ├ IDE 集成开发环境
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/ideweb.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/ideweb/index.html" style="text-indent:1em;">
                                                     ├ 数字 IDE 网页
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/idepro.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/idepro/index.html" style="text-indent:1em;">
                                                     ├ 数字 IDE 专业版
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/idepy.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/ide/idepy/index.html" style="text-indent:1em;">
                                                     └ 数字 IDE Python
                                                 </a>
                                             </li>
@@ -136,13 +136,13 @@
                                                         └ 小程序
                                                     </b>
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ftsearch.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ftsearch/index.html" style="text-indent:1em;">
                                                     ├ 全文搜索
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ft_repl.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ft_repl/index.html" style="text-indent:1em;">
                                                     ├ 全文替换
                                                 </a>
-                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ws_dlink.html" style="text-indent:1em;">
+                                                <a target="_blank" href="http://dts.digitser.cn/zh-CN/applet/ws_dlinkg/index.html" style="text-indent:1em;">
                                                     └ 死链检测
                                                 </a>
                                             </li>
@@ -231,7 +231,7 @@
                         </p>
                         <p style="text-indent:2em;">
                             在满足
-                            <a target="_blank" href="http://www.digitser.cn/zh-CN.html">
+                            <a target="_blank" href="http://dts.digitser.cn/zh-CN.html">
                                 <b>
                                     "德云社区"
                                 </b>
@@ -490,7 +490,7 @@
                             </a>
                         </p>
                         <p style="font-size:10px;text-align:center;color:#7d7d7d;">
-                            <a target="_blank" href="http://www.miitbeian.gov.cn/state/outPortal/loginPortal.action" style="color:#7d7d7d;">
+                            <a target="_blank" href="http://www.miitbeian.gov.cn/" style="color:#7d7d7d;">
                                 工业和信息化部
                             </a>
                             ：粤ICP备14079481号-2
